提交登陆页面

--- a/src/main/webapp/css/style.less
+++ b/src/main/webapp/css/style.less
@@ -317,3 +317,39 @@ text-decoration: none;}
                }
     }
 }
+
+.graybg{background:#F2F2F2}
+.loginlogo{background:url(../image/login_logo.png) left 10px no-repeat;height:65px;}
+.logincnt{margin:75px auto;background:#D7D7D7;padding:5px;width:890px;position:relative;
+    .topswitch{
+        width:260px;height:40px;position:absolute;right:100px;top:-34px;z-index:999;
+        .click1{width:120px;height:40px;cursor:pointer;float:left;}
+        .click2{width:120px;height:40px;cursor:pointer;float:left;margin-left:10px;}
+        
+    }
+    .btn1{background:url(../image/bt1.png) left top no-repeat;}
+    .btn2{background:url(../image/bt2.png) left top no-repeat;}
+
+
+    .loginbox{background:#fff;}
+    .loginbanner{width:400px;height:350px;overflow:hidden;}
+    .loginform{float:right;width:400px;border-left:0px solid #ccc;
+               .forms{
+                   h4{font-size:14px;color:#999;margin:0;padding:15px 0;font-weight:normal;}
+                   input{width:300px;font-size:14px;line-height:28px;}
+                   .inputs{position:relative;margin-right:80px;}
+                   .username{background:url(../image/login-all-bg.png)  -369px -106px  no-repeat;width:20px;height:20px;position:absolute;right:30px;top:5px;}
+                   .password{background:url(../image/login-all-bg.png) -340px -106px  no-repeat;width:20px;height:20px;position:absolute;right:30px;top:5px;}
+                   .otherinput{margin:25px 0;
+                               input{width:auto;}
+                   }
+                   .loginbtn{background:url(../image/login-all-bg.png) 0 -62px;width:309px;height:32px;display:block;}
+                    .loginbtn:hover{background:url(../image/login-all-bg.png) 0 -96px;width:309px;height:32px;display:block;}
+                   
+                    }
+               }
+     .loginothers{margin-top:30px;
+                           span{display:block;padding-bottom:10px}
+                           b{font-weight:normal;color:#757575}
+    }
+}
