--- a/src/main/webapp/css/style.css
+++ b/src/main/webapp/css/style.css
@@ -1,4 +1,4 @@
-body {
+﻿body {
   margin: 0px;
   padding: 0px;
   font-size: 12px;
@@ -67,13 +67,13 @@ textarea {
   border-bottom: 1px solid #fff;
 }
 .hd_global_top_bar .icon-down {
-  background-image: url(../images/indexhead_sprite.png);
+  background-image: url(../image/indexhead_sprite.png);
   background-position: right -257px;
   background-repeat: no-repeat;
   padding-right: 20px;
 }
 .hd_global_top_bar .icon-up {
-  background-image: url(../images/indexhead_sprite.png);
+  background-image: url(../image/indexhead_sprite.png);
   background-position: right -285px;
   background-repeat: no-repeat;
   padding-right: 20px;
@@ -100,7 +100,7 @@ textarea {
   height: 80px;
 }
 .logotop .logo {
-  background: url(../images/index_logo.png) center center no-repeat;
+  background: url(../image/index_logo.png) center center no-repeat;
   width: 165px;
   height: 59px;
   padding: 10px;
@@ -143,7 +143,7 @@ textarea {
   font-family: 'Microsoft YaHei';
   float: left;
   border: 1px solid #eaeaea;
-  background: url(../images/indexhead_sprite.png) 5px -685px no-repeat #f7f7f7;
+  background: url(../image/indexhead_sprite.png) 5px -685px no-repeat #f7f7f7;
   margin: 6px 0  6px 20px;
   cursor: pointer;
 }
@@ -173,7 +173,7 @@ textarea {
   font-size: 14px;
   color: #fff;
   text-align: center;
-  background: url(../images/indexhead_sprite.png) -240px -1108px no-repeat;
+  background: url(../image/indexhead_sprite.png) -240px -1108px no-repeat;
   margin: 0;
   padding: 8px 0;
 }
@@ -229,7 +229,7 @@ textarea {
 }
 .index-typett {
   background: #E4FEC5;
-  background-image: url(../images/indexhead_sprite.png);
+  background-image: url(../image/indexhead_sprite.png);
   background-repeat: no-repeat;
   height: 40px;
   border-bottom: 1px solid #3DA200;
@@ -311,7 +311,7 @@ textarea {
   font-weight: bold;
 }
 .footcontent ul {
-  background-image: url(../images/icon.png);
+  background-image: url(../image/icon.png);
   background-repeat: no-repeat;
   float: left;
   margin: 0 30px;
@@ -541,10 +541,10 @@ textarea {
   margin-top: 5px;
 }
 .product-intro .edit .minus {
-  background: url(../images/plus.png) left top no-repeat;
+  background: url(../image/plus.png) left top no-repeat;
 }
 .product-intro .edit .plus {
-  background: url(../images/plus.png) right top no-repeat;
+  background: url(../image/plus.png) right top no-repeat;
 }
 .product-intro .preview {
   position: absolute;
@@ -563,28 +563,28 @@ textarea {
 .product-intro .preview .zoompic a.left {
   display: block;
   float: left;
-  background: url(../images/preview.png) left top no-repeat;
+  background: url(../image/preview.png) left top no-repeat;
   height: 54px;
   width: 17px;
 }
 .product-intro .preview .zoompic a.left:hover {
   display: block;
   float: left;
-  background: url(../images/preview.png) -34px top no-repeat;
+  background: url(../image/preview.png) -34px top no-repeat;
   height: 54px;
   width: 17px;
 }
 .product-intro .preview .zoompic a.right {
   display: block;
   float: left;
-  background: url(../images/preview.png) -17px 0 no-repeat;
+  background: url(../image/preview.png) -17px 0 no-repeat;
   height: 54px;
   width: 17px;
 }
 .product-intro .preview .zoompic a.right:hover {
   display: block;
   float: left;
-  background: url(../images/preview.png) -51px 0 no-repeat;
+  background: url(../image/preview.png) -51px 0 no-repeat;
   height: 54px;
   width: 17px;
 }
@@ -606,7 +606,7 @@ textarea {
   cursor: pointer;
 }
 .product-intro .addin {
-  background: url(../images/btn.png) 0 0;
+  background: url(../image/btn.png) 0 0;
   color: #fff;
   width: 137px;
   height: 38px;
@@ -678,7 +678,7 @@ textarea {
   margin-bottom: 10px;
 }
 .intros .othermenu .othertype h1 {
-  background: url(../images/bg.png) left top repeat-x;
+  background: url(../image/bg.png) left top repeat-x;
   margin: 0;
   padding: 8px;
   font-size: 14px;
@@ -707,5 +707,120 @@ textarea {
   display: block;
   clear: both;
   padding: 5px;
+}
+.graybg {
+  background: #f2f2f2;
+}
+.loginlogo {
+  background: url(../image/login_logo.png) left 10px no-repeat;
+  height: 65px;
+}
+.logincnt {
+  margin: 75px auto;
+  background: #D7D7D7;
+  padding: 5px;
+  width: 890px;
+  position: relative;
+}
+.logincnt .topswitch {
+  width: 260px;
+  height: 40px;
+  position: absolute;
+  right: 100px;
+  top: -34px;
+  z-index: 999;
+}
+.logincnt .topswitch .click1 {
+  width: 120px;
+  height: 40px;
+  cursor: pointer;
+  float: left;
+}
+.logincnt .topswitch .click2 {
+  width: 120px;
+  height: 40px;
+  cursor: pointer;
+  float: left;
+  margin-left: 10px;
+}
+.logincnt .btn1 {
+  background: url(../image/bt1.png) left top no-repeat;
+}
+.logincnt .btn2 {
+  background: url(../image/bt2.png) left top no-repeat;
+}
+.logincnt .loginbox {
+  background: #fff;
+}
+.logincnt .loginbanner {
+  width: 400px;
+  height: 350px;
+  overflow: hidden;
+}
+.logincnt .loginform {
+  float: right;
+  width: 400px;
+  border-left: 0px solid #ccc;
+}
+.logincnt .loginform .forms h4 {
+  font-size: 14px;
+  color: #999;
+  margin: 0;
+  padding: 15px 0;
+  font-weight: normal;
+}
+.logincnt .loginform .forms input {
+  width: 300px;
+  font-size: 14px;
+  line-height: 28px;
+}
+.logincnt .loginform .forms .inputs {
+  position: relative;
+  margin-right: 80px;
+}
+.logincnt .loginform .forms .username {
+  background: url(../image/login-all-bg.png) -369px -106px no-repeat;
+  width: 20px;
+  height: 20px;
+  position: absolute;
+  right: 30px;
+  top: 5px;
+}
+.logincnt .loginform .forms .password {
+  background: url(../image/login-all-bg.png) -340px -106px no-repeat;
+  width: 20px;
+  height: 20px;
+  position: absolute;
+  right: 30px;
+  top: 5px;
+}
+.logincnt .loginform .forms .otherinput {
+  margin: 25px 0;
+}
+.logincnt .loginform .forms .otherinput input {
+  width: auto;
+}
+.logincnt .loginform .forms .loginbtn {
+  background: url(../image/login-all-bg.png) 0 -62px;
+  width: 309px;
+  height: 32px;
+  display: block;
+}
+.logincnt .loginform .forms .loginbtn:hover {
+  background: url(../image/login-all-bg.png) 0 -96px;
+  width: 309px;
+  height: 32px;
+  display: block;
+}
+.logincnt .loginothers {
+  margin-top: 30px;
+}
+.logincnt .loginothers span {
+  display: block;
+  padding-bottom: 10px;
+}
+.logincnt .loginothers b {
+  font-weight: normal;
+  color: #757575;
 }
 /*# sourceMappingURL=style.css.map */
