增加了今日报价0day和购物车shopcart两个页面并更新相应4个css文件

--- a/src/main/webapp/css/style.less
+++ b/src/main/webapp/css/style.less
@@ -353,3 +353,66 @@ text-decoration: none;}
                            b{font-weight:normal;color:#757575}
     }
 }
+
+.usermain{
+    border:1px solid #ccc;background:#F4F4F4;
+
+    .user-left{
+        width:200px;margin-right:20px;
+        h1{text-align:center;color:#3DA200;}
+        ul{list-style-type:none;margin:10px;padding:0;border:1px solid #ccc;border-bottom:none;
+           li{border-bottom:1px solid #ccc;background:#fff;
+              a{display:block;text-align:center;padding:12px;text-decoration:none;color:#333}
+              a:hover{color:#3da200;background:#E4FEC5;}
+           }
+           .current{color:#3da200;background:#E4FEC5;}
+        }
+    }
+    .user-right{
+        border:1px solid #ccc;padding:15px;background:#fff;float:right;margin:15px;width:750px;height:800px;
+        a{text-decoration:none}
+        .btn1{background:#51B50B;color:#fff;text-align:center;padding:10px 20px;width:100px;border-radius:2px;display:block;}
+        .btn1:hover{background:#4e9f16;}
+        table{border:1px solid #ccc; border-collapse:collapse;margin:15px 0 0 0}
+        table th{padding:10px;font-size:14px;}
+        table td{padding:5px 13px;text-align:center;}
+        .alir{text-align:right;}
+        table,th, td  {  border: 1px solid #ccc; }
+        a.link{color:#3da200}
+        a.link:hover{text-decoration:underline;}
+
+        .btn2{background:#51B50B;color:#fff;text-align:center;padding:5px 10px;width:60px;border-radius:2px;display:block;}
+        .btn2:hover{background:#4e9f16;}
+
+         .btn3{background:#51B50B;color:#fff420;text-align:center;padding:10px 20px;width:100px;border-radius:2px;display:block;float:right;font-size:14px;font-weight:bold;}
+        .btn3:hover{background:#4e9f16;}
+
+        .total{padding:20px;margin:20px;text-align:right;
+               span{padding:15px ;display:block;float:right;}
+        }
+    }
+
+}
+
+ 
+.daynow{
+     table{border:1px solid #ccc; border-collapse:collapse;margin:15px 0 0 0;
+        
+        th{padding:10px;font-size:14px;background:#F1F1F1}
+        td{padding:8px 13px;text-align:center;}
+        th, td  {  border: 1px solid #ccc; }
+        a.link{color:#3da200}
+        a.link:hover{text-decoration:underline;}
+        .alir{text-align:right;}
+        .odd{background:#fcfcfc}
+        .current{background:#E4FEC5}
+        .mktprice{text-decoration:line-through;font-weight:bold;}
+        .avlprice{color:#277700;font-weight:bold;}
+     }
+      .siwtchbox{
+          padding:15px 0 0px 0;height:33px;border-bottom:1px solid #ccc;position:relative;
+          div{float:left;width:100px;padding:8px 15px;text-align:center;background:#efefef;border:1px solid #ccc;margin:0 15px 0 0;cursor:pointer}
+          .chg{background:#fff;}
+      }
+ }
+        
