--- a/src/main/webapp/css/style.css
+++ b/src/main/webapp/css/style.css
@@ -1,4 +1,4 @@
-body {
+﻿body {
   margin: 0px;
   padding: 0px;
   font-size: 12px;
@@ -67,13 +67,13 @@ textarea {
   border-bottom: 1px solid #fff;
 }
 .hd_global_top_bar .icon-down {
-  background-image: url(../images/indexhead_sprite.png);
+  background-image: url(../image/indexhead_sprite.png);
   background-position: right -257px;
   background-repeat: no-repeat;
   padding-right: 20px;
 }
 .hd_global_top_bar .icon-up {
-  background-image: url(../images/indexhead_sprite.png);
+  background-image: url(../image/indexhead_sprite.png);
   background-position: right -285px;
   background-repeat: no-repeat;
   padding-right: 20px;
@@ -100,7 +100,7 @@ textarea {
   height: 80px;
 }
 .logotop .logo {
-  background: url(../images/index_logo.png) center center no-repeat;
+  background: url(../image/index_logo.png) center center no-repeat;
   width: 165px;
   height: 59px;
   padding: 10px;
@@ -143,7 +143,7 @@ textarea {
   font-family: 'Microsoft YaHei';
   float: left;
   border: 1px solid #eaeaea;
-  background: url(../images/indexhead_sprite.png) 5px -685px no-repeat #f7f7f7;
+  background: url(../image/indexhead_sprite.png) 5px -685px no-repeat #f7f7f7;
   margin: 6px 0  6px 20px;
   cursor: pointer;
 }
@@ -173,7 +173,7 @@ textarea {
   font-size: 14px;
   color: #fff;
   text-align: center;
-  background: url(../images/indexhead_sprite.png) -240px -1108px no-repeat;
+  background: url(../image/indexhead_sprite.png) -240px -1108px no-repeat;
   margin: 0;
   padding: 8px 0;
 }
@@ -229,7 +229,7 @@ textarea {
 }
 .index-typett {
   background: #E4FEC5;
-  background-image: url(../images/indexhead_sprite.png);
+  background-image: url(../image/indexhead_sprite.png);
   background-repeat: no-repeat;
   height: 40px;
   border-bottom: 1px solid #3DA200;
@@ -311,7 +311,7 @@ textarea {
   font-weight: bold;
 }
 .footcontent ul {
-  background-image: url(../images/icon.png);
+  background-image: url(../image/icon.png);
   background-repeat: no-repeat;
   float: left;
   margin: 0 30px;
@@ -541,10 +541,10 @@ textarea {
   margin-top: 5px;
 }
 .product-intro .edit .minus {
-  background: url(../images/plus.png) left top no-repeat;
+  background: url(../image/plus.png) left top no-repeat;
 }
 .product-intro .edit .plus {
-  background: url(../images/plus.png) right top no-repeat;
+  background: url(../image/plus.png) right top no-repeat;
 }
 .product-intro .preview {
   position: absolute;
@@ -563,28 +563,28 @@ textarea {
 .product-intro .preview .zoompic a.left {
   display: block;
   float: left;
-  background: url(../images/preview.png) left top no-repeat;
+  background: url(../image/preview.png) left top no-repeat;
   height: 54px;
   width: 17px;
 }
 .product-intro .preview .zoompic a.left:hover {
   display: block;
   float: left;
-  background: url(../images/preview.png) -34px top no-repeat;
+  background: url(../image/preview.png) -34px top no-repeat;
   height: 54px;
   width: 17px;
 }
 .product-intro .preview .zoompic a.right {
   display: block;
   float: left;
-  background: url(../images/preview.png) -17px 0 no-repeat;
+  background: url(../image/preview.png) -17px 0 no-repeat;
   height: 54px;
   width: 17px;
 }
 .product-intro .preview .zoompic a.right:hover {
   display: block;
   float: left;
-  background: url(../images/preview.png) -51px 0 no-repeat;
+  background: url(../image/preview.png) -51px 0 no-repeat;
   height: 54px;
   width: 17px;
 }
@@ -606,7 +606,7 @@ textarea {
   cursor: pointer;
 }
 .product-intro .addin {
-  background: url(../images/btn.png) 0 0;
+  background: url(../image/btn.png) 0 0;
   color: #fff;
   width: 137px;
   height: 38px;
@@ -678,7 +678,7 @@ textarea {
   margin-bottom: 10px;
 }
 .intros .othermenu .othertype h1 {
-  background: url(../images/bg.png) left top repeat-x;
+  background: url(../image/bg.png) left top repeat-x;
   margin: 0;
   padding: 8px;
   font-size: 14px;
@@ -712,7 +712,7 @@ textarea {
   background: #f2f2f2;
 }
 .loginlogo {
-  background: url(../images/login_logo.png) left 10px no-repeat;
+  background: url(../image/login_logo.png) left 10px no-repeat;
   height: 65px;
 }
 .logincnt {
@@ -744,10 +744,10 @@ textarea {
   margin-left: 10px;
 }
 .logincnt .btn1 {
-  background: url(../images/bt1.png) left top no-repeat;
+  background: url(../image/bt1.png) left top no-repeat;
 }
 .logincnt .btn2 {
-  background: url(../images/bt2.png) left top no-repeat;
+  background: url(../image/bt2.png) left top no-repeat;
 }
 .logincnt .loginbox {
   background: #fff;
@@ -779,7 +779,7 @@ textarea {
   margin-right: 80px;
 }
 .logincnt .loginform .forms .username {
-  background: url(../images/login-all-bg.png) -369px -106px no-repeat;
+  background: url(../image/login-all-bg.png) -369px -106px no-repeat;
   width: 20px;
   height: 20px;
   position: absolute;
@@ -787,7 +787,7 @@ textarea {
   top: 5px;
 }
 .logincnt .loginform .forms .password {
-  background: url(../images/login-all-bg.png) -340px -106px no-repeat;
+  background: url(../image/login-all-bg.png) -340px -106px no-repeat;
   width: 20px;
   height: 20px;
   position: absolute;
@@ -801,13 +801,13 @@ textarea {
   width: auto;
 }
 .logincnt .loginform .forms .loginbtn {
-  background: url(../images/login-all-bg.png) 0 -62px;
+  background: url(../image/login-all-bg.png) 0 -62px;
   width: 309px;
   height: 32px;
   display: block;
 }
 .logincnt .loginform .forms .loginbtn:hover {
-  background: url(../images/login-all-bg.png) 0 -96px;
+  background: url(../image/login-all-bg.png) 0 -96px;
   width: 309px;
   height: 32px;
   display: block;
@@ -822,5 +822,191 @@ textarea {
 .logincnt .loginothers b {
   font-weight: normal;
   color: #757575;
+}
+.usermain {
+  border: 1px solid #ccc;
+  background: #F4F4F4;
+}
+.usermain .user-left {
+  width: 200px;
+  margin-right: 20px;
+}
+.usermain .user-left h1 {
+  text-align: center;
+  color: #3DA200;
+}
+.usermain .user-left ul {
+  list-style-type: none;
+  margin: 10px;
+  padding: 0;
+  border: 1px solid #ccc;
+  border-bottom: none;
+}
+.usermain .user-left ul li {
+  border-bottom: 1px solid #ccc;
+  background: #fff;
+}
+.usermain .user-left ul li a {
+  display: block;
+  text-align: center;
+  padding: 12px;
+  text-decoration: none;
+  color: #333333;
+}
+.usermain .user-left ul li a:hover {
+  color: #3da200;
+  background: #E4FEC5;
+}
+.usermain .user-left ul .current {
+  color: #3da200;
+  background: #E4FEC5;
+}
+.usermain .user-right {
+  border: 1px solid #ccc;
+  padding: 15px;
+  background: #fff;
+  float: right;
+  margin: 15px;
+  width: 750px;
+  height: 800px;
+}
+.usermain .user-right a {
+  text-decoration: none;
+}
+.usermain .user-right .btn1 {
+  background: #51B50B;
+  color: #fff;
+  text-align: center;
+  padding: 10px 20px;
+  width: 100px;
+  border-radius: 2px;
+  display: block;
+}
+.usermain .user-right .btn1:hover {
+  background: #4e9f16;
+}
+.usermain .user-right table {
+  border: 1px solid #ccc;
+  border-collapse: collapse;
+  margin: 15px 0 0 0;
+}
+.usermain .user-right table th {
+  padding: 10px;
+  font-size: 14px;
+}
+.usermain .user-right table td {
+  padding: 5px 13px;
+  text-align: center;
+}
+.usermain .user-right .alir {
+  text-align: right;
+}
+.usermain .user-right table,
+.usermain .user-right th,
+.usermain .user-right td {
+  border: 1px solid #ccc;
+}
+.usermain .user-right a.link {
+  color: #3da200;
+}
+.usermain .user-right a.link:hover {
+  text-decoration: underline;
+}
+.usermain .user-right .btn2 {
+  background: #51B50B;
+  color: #fff;
+  text-align: center;
+  padding: 5px 10px;
+  width: 60px;
+  border-radius: 2px;
+  display: block;
+}
+.usermain .user-right .btn2:hover {
+  background: #4e9f16;
+}
+.usermain .user-right .btn3 {
+  background: #51B50B;
+  color: #fff420;
+  text-align: center;
+  padding: 10px 20px;
+  width: 100px;
+  border-radius: 2px;
+  display: block;
+  float: right;
+  font-size: 14px;
+  font-weight: bold;
+}
+.usermain .user-right .btn3:hover {
+  background: #4e9f16;
+}
+.usermain .user-right .total {
+  padding: 20px;
+  margin: 20px;
+  text-align: right;
+}
+.usermain .user-right .total span {
+  padding: 15px ;
+  display: block;
+  float: right;
+}
+.daynow table {
+  border: 1px solid #ccc;
+  border-collapse: collapse;
+  margin: 15px 0 0 0;
+}
+.daynow table th {
+  padding: 10px;
+  font-size: 14px;
+  background: #f1f1f1;
+}
+.daynow table td {
+  padding: 8px 13px;
+  text-align: center;
+}
+.daynow table th,
+.daynow table td {
+  border: 1px solid #ccc;
+}
+.daynow table a.link {
+  color: #3da200;
+}
+.daynow table a.link:hover {
+  text-decoration: underline;
+}
+.daynow table .alir {
+  text-align: right;
+}
+.daynow table .odd {
+  background: #fcfcfc;
+}
+.daynow table .current {
+  background: #e4fec5;
+}
+.daynow table .mktprice {
+  text-decoration: line-through;
+  font-weight: bold;
+}
+.daynow table .avlprice {
+  color: #277700;
+  font-weight: bold;
+}
+.daynow .siwtchbox {
+  padding: 15px 0 0px 0;
+  height: 33px;
+  border-bottom: 1px solid #ccc;
+  position: relative;
+}
+.daynow .siwtchbox div {
+  float: left;
+  width: 100px;
+  padding: 8px 15px;
+  text-align: center;
+  background: #efefef;
+  border: 1px solid #ccc;
+  margin: 0 15px 0 0;
+  cursor: pointer;
+}
+.daynow .siwtchbox .chg {
+  background: #fff;
 }
 /*# sourceMappingURL=style.css.map */
