增加了4个原始页面：用户中心、订单确认、所有订单、供货整理，以及相应的4个css文件的更新

--- a/src/main/webapp/css/style.less
+++ b/src/main/webapp/css/style.less
@@ -384,14 +384,46 @@ text-decoration: none;}
         .btn2{background:#51B50B;color:#fff;text-align:center;padding:5px 10px;width:60px;border-radius:2px;display:block;}
         .btn2:hover{background:#4e9f16;}
 
-         .btn3{background:#51B50B;color:#fff420;text-align:center;padding:10px 20px;width:100px;border-radius:2px;display:block;float:right;font-size:14px;font-weight:bold;}
+        .btn3{background:#51B50B;color:#fff420;text-align:center;padding:10px 20px;width:100px;border-radius:2px;display:block;float:right;font-size:14px;font-weight:bold;}
         .btn3:hover{background:#4e9f16;}
+
+         .btn4{background:#51B50B;color:#fff;text-align:center;padding:5px 10px;width:60px;border-radius:2px;border:none;cursor:pointer}
+        .btn4:hover{background:#4e9f16;}
 
         .total{padding:20px;margin:20px;text-align:right;
                span{padding:15px ;display:block;float:right;}
         }
     }
 
+    .myprosearch{
+        font-size:15px;
+        select{margin:0 20px 0 10px;width:150px;}
+    }
+
+    .ordermenu{
+            display:block;margin:0;padding:0;height:39px;border-bottom:2px solid #ccc;position:relative;list-style-type:none;width:100%;
+        
+            li{
+                height:39px;border-bottom:2px solid #ccc;text-align:center;width:100px;display:block;float:left;
+                span{display:block;font-weight:bold;border-right:1px solid #efefef;margin:5px 0;padding:5px;}
+                i{font-weight:bold;font-style:normal;color:#277700;margin:0 5px}
+            }
+            .current{color:#3DA200;border-bottom:2px solid #3DA200}
+            .delorder{text-align:center;width:120px;display:block;position:absolute;right:0;top:5px;border:none;background:url(../image/indexhead_sprite.png) -282px -548px no-repeat;}         
+
+       }
+       .ordertime{margin:10px 0 0 0;padding:10px;font-size:14px;font-weight:normal;color:#666;border:1px solid #ccc;background:#E4FEC5;border-bottom:0}
+
+       .shiptitle{border:1px solid #f5f5f5;background:#fcfcfc;padding:5px 20px;margin:0 0 20px 0;
+                  h3{border-bottom:1px dashed #ccc;padding:10px 0;margin:0 0 10px 0}
+                  .useraddr{color:#333;font-size:14px;margin:10px 0;
+                            b{color:#4e9f16}
+                  }
+                  th{background:#F5F5F5}
+       }
+       .orderstate{margin:10px 0;
+                   span{color:red}
+       }
 }
 
  
