--- a/src/main/webapp/css/style.css
+++ b/src/main/webapp/css/style.css
@@ -939,6 +939,19 @@ textarea {
 .usermain .user-right .btn3:hover {
   background: #4e9f16;
 }
+.usermain .user-right .btn4 {
+  background: #51B50B;
+  color: #fff;
+  text-align: center;
+  padding: 5px 10px;
+  width: 60px;
+  border-radius: 2px;
+  border: none;
+  cursor: pointer;
+}
+.usermain .user-right .btn4:hover {
+  background: #4e9f16;
+}
 .usermain .user-right .total {
   padding: 20px;
   margin: 20px;
@@ -948,6 +961,96 @@ textarea {
   padding: 15px ;
   display: block;
   float: right;
+}
+.usermain .myprosearch {
+  font-size: 15px;
+}
+.usermain .myprosearch select {
+  margin: 0 20px 0 10px;
+  width: 150px;
+}
+.usermain .ordermenu {
+  display: block;
+  margin: 0;
+  padding: 0;
+  height: 39px;
+  border-bottom: 2px solid #ccc;
+  position: relative;
+  list-style-type: none;
+  width: 100%;
+}
+.usermain .ordermenu li {
+  height: 39px;
+  border-bottom: 2px solid #ccc;
+  text-align: center;
+  width: 100px;
+  display: block;
+  float: left;
+}
+.usermain .ordermenu li span {
+  display: block;
+  font-weight: bold;
+  border-right: 1px solid #efefef;
+  margin: 5px 0;
+  padding: 5px;
+}
+.usermain .ordermenu li i {
+  font-weight: bold;
+  font-style: normal;
+  color: #277700;
+  margin: 0 5px;
+}
+.usermain .ordermenu .current {
+  color: #3DA200;
+  border-bottom: 2px solid #3da200;
+}
+.usermain .ordermenu .delorder {
+  text-align: center;
+  width: 120px;
+  display: block;
+  position: absolute;
+  right: 0;
+  top: 5px;
+  border: none;
+  background: url(../image/indexhead_sprite.png) -282px -548px no-repeat;
+}
+.usermain .ordertime {
+  margin: 10px 0 0 0;
+  padding: 10px;
+  font-size: 14px;
+  font-weight: normal;
+  color: #666;
+  border: 1px solid #ccc;
+  background: #E4FEC5;
+  border-bottom: 0;
+}
+.usermain .shiptitle {
+  border: 1px solid #f5f5f5;
+  background: #fcfcfc;
+  padding: 5px 20px;
+  margin: 0 0 20px 0;
+}
+.usermain .shiptitle h3 {
+  border-bottom: 1px dashed #ccc;
+  padding: 10px 0;
+  margin: 0 0 10px 0;
+}
+.usermain .shiptitle .useraddr {
+  color: #333;
+  font-size: 14px;
+  margin: 10px 0;
+}
+.usermain .shiptitle .useraddr b {
+  color: #4e9f16;
+}
+.usermain .shiptitle th {
+  background: #f5f5f5;
+}
+.usermain .orderstate {
+  margin: 10px 0;
+}
+.usermain .orderstate span {
+  color: #ff0000;
 }
 .daynow table {
   border: 1px solid #ccc;
