--- a/src/main/webapp/css/style.less
+++ b/src/main/webapp/css/style.less
@@ -375,11 +375,10 @@ text-decoration: none;}
         a{text-decoration:none}
         .btn1{background:#51B50B;color:#fff;text-align:center;padding:10px 20px;width:100px;border-radius:2px;display:block;}
         .btn1:hover{background:#4e9f16;}
-        table{border:1px solid #ccc; border-collapse:collapse;margin:15px 0 0 0}
+        table{}
         table th{padding:10px;font-size:14px;}
         table td{padding:5px 13px;text-align:center;}
         .alir{text-align:right;}
-        table,th, td  {  border: 1px solid #ccc; }
         a.link{color:#3da200}
         a.link:hover{text-decoration:underline;}
 
@@ -402,7 +401,7 @@ text-decoration: none;}
         select{margin:0 20px 0 10px;width:150px;}
     }
 
-    .ordermenu{
+        .ordermenu{
             display:block;margin:0;padding:0;height:39px;border-bottom:2px solid #ccc;position:relative;list-style-type:none;width:100%;
         
             li{
