--- a/src/main/webapp/scripts/jquery-easyui-1.3.6/themes/bootstrap/datagrid.css
+++ b/src/main/webapp/scripts/jquery-easyui-1.3.6/themes/bootstrap/datagrid.css
@@ -252,7 +252,7 @@
   cursor: default;
 }
 .datagrid-row-selected {
-  background: #0081c2;
+  background: #50BD0E;
   color: #fff;
 }
 .datagrid-body .datagrid-editable .datagrid-editable-input {
