--- a/src/main/webapp/css/style.less
+++ b/src/main/webapp/css/style.less
@@ -10,7 +10,7 @@ body {
     
 }
 @fontyh: 'Microsoft YaHei';
-
+img{border:0}
 ul{margin:0;padding:0;list-style-type:none;}
 body, button, input, select, textarea {
     font: 12px @fontyh,Arial,Helvetica,sans-serif;
