--- a/src/main/webapp/scripts/jquery-easyui-1.3.6/themes/default/easyui.css
+++ b/src/main/webapp/scripts/jquery-easyui-1.3.6/themes/default/easyui.css
@@ -2294,7 +2294,7 @@
   color: #000000;
 }
 .validatebox-invalid {
-  background-image: url('images/validatebox_warning.png');
+  /**background-image: url('images/validatebox_warning.png');**/
   background-repeat: no-repeat;
   background-position: right center;
   border-color: #ffa8a8;
