--- a/src/main/webapp/css/style.less
+++ b/src/main/webapp/css/style.less
@@ -156,6 +156,7 @@ input, select, textarea {
     ul{display:block;
        .bg{background:#efffe9}
        li{
+           height:290px;
            margin:15px 0;
            padding: 0 17px;
            width: 160px;
@@ -177,6 +178,7 @@ text-decoration: none;}
                     text-align: center;color: #E4393C;
                     span{font-size:12px;font-weight:bold;color:#000}
             }
+            .p-price-num{width:90px;}
        }
     }
     .fore3{}
