--- a/src/main/webapp/css/style.less
+++ b/src/main/webapp/css/style.less
@@ -87,12 +87,7 @@ input, select, textarea {
                                     dl{border-bottom: 1px solid #EEE;padding: 6px 0;overflow: hidden;display:block;
                                        dt{display:block; float: left;width: 54px;line-height: 22px;text-align: right;padding: 3px 6px 0 0;font-weight: 700;color: #E4393C;}
                                        dd{display:block;padding: 3px 0 0;margin:0;float:left;width:430px;
-                                          em{float: left;
-height: 14px;
-margin: 4px 0;
-line-height: 14px;
-padding: 0 8px;
-border-left: 1px solid #ccc;font-style:normal;}
+                                          em{float: left;height: 14px;margin: 4px 0;line-height: 14px;padding: 0 8px;border-left: 1px solid #ccc;font-style:normal;}
                                        }
                                     }
                                    
@@ -476,3 +471,23 @@ text-decoration: none;}
       }
  }
         
+
+
+.addcart{border-top:3px solid #333;position:fixed;bottom:0;width:100%;background:#E7E7E7;
+         .lightcartinfo{border: 2px solid #DDD;background: #F0F0F0;height: 30px;margin: 10px ;min-width: 900px;line-height:30px;
+                p{margin:0 30px;}
+                .unitext{float:right;
+                         .b{font-weight:bold}
+                         .fred{color:red}
+                }
+         }
+         .strip{width:22px;background:url(../images/buy_55.gif);height:13px;margin:-13px auto 15px auto;cursor:pointer; } 
+         .completeframe{
+             padding:5px;margin:15px;border:1px solid #ccc;
+             h2{font-weight:normal;font-size:12px;}
+             .ordertotal{background:#fff;padding:10px;border:1px solid #ccc;margin-top:5px;}
+             .b{font-weight:bold}
+                         .fred{color:red}
+         }
+
+}
