--- a/src/main/webapp/css/pager.css
+++ b/src/main/webapp/css/pager.css
@@ -57,7 +57,7 @@
 	height:20px;
 	line-height:20px;
 	padding:0px;
-	font-family:arial,ËÎÌå,sans-serif;
+	font-family:arial,ï¿½ï¿½ï¿½ï¿½,sans-serif;
 	text-align:center;
 	border:0px;
 	background-color:#0063DC;
@@ -76,4 +76,7 @@
 	left:0px;
 	top:0px;
 	outline:none;
+}
+#btn-buy {
+	background: rgb(247, 247, 247); margin: 0px 4px 0px 0px; padding: 0px 9px; border-radius: 2px; border: 1px solid rgb(221, 221, 221); height: 19px; text-align: center; color: rgb(51, 51, 51); line-height: 19px; text-decoration: none; float: left; cursor: pointer;
 }
